--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@szczepano/parcel-resolver-jison",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "lib/JisonResolver.js",
   "source": "src/JisonResolver.js",
@@ -10,6 +10,10 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vane/parcel-resolver-jison.git"
+  },
+  "engines": {
+    "node": ">= 12.0.0",
+    "parcel": "^2.8.3"
   },
   "author": "Michal Szczepanski",
   "license": "MIT",
